# clusterdesk-worker

./: .env.example  .gitignore  Makefile  main.py  pyproject.toml  railway.json
migrations/: 001_initial_schema.sql  002_rls.sql  20260508120001_initial_schema.sql  20260508120002_rls.sql  20260508120003_subscriber_attribution.sql  20260513120001_filings_10b5_cache.sql
tests/: test_cluster.py  test_db_client.py  test_filter.py  test_market_cap.py  test_publisher.py  test_scorer.py  test_scraper.py  test_sec_footnote.py  test_types.py
tests/fixtures/: cluster_buys.html  insider_purchases.html
worker/: types.py
worker/cluster/: detect.py
worker/db/: client.py
worker/filter/: market_cap.py  rules.py  sec_footnote.py
worker/publisher/: email_weekly.py  ticker_page.py  twitter.py
worker/scorer/: composite.py
worker/scraper/: openinsider.py
