[project]
name = "clusterdesk-worker"
version = "0.1.0"
description = "ClusterDesk insider cluster buy pipeline"
authors = [
    {name = "Ben Poon",email = "benjamintpoon@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "supabase (>=2.30.0,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "yfinance (>=1.3.0,<2.0.0)",
    "tweepy (>=4.16.0,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "typer (>=0.25.1,<1.0.0)",
    "rich (>=10.11.0,<15.0.0)",
    "sentry-sdk (>=2.59.0,<3.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "responses (>=0.26.0,<0.27.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "mypy (>=2.0.0,<3.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
